force-app/main/default/objects/SIS_Evaluation_methods__c/SIS_Evaluation_methods__c.object-meta.xml
<CustomObject>
    <label>Modalité d&apos;évaluation</label>
    <nameField>
        <label>Nom de la modalité</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Modalités d&apos;évaluation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>