force-app/main/default/objects/SIS_Evaluation_methods__c/fields/Comp_tence_du_cours__c.field-meta.xml
<CustomField>
    <fullName>Comp_tence_du_cours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Compétence du cours</label>
    <referenceTo>Course_Skill__c</referenceTo>
    <relationshipLabel>Modalités d&apos;évaluation</relationshipLabel>
    <relationshipName>SIS_Modalit_s_d_valuation</relationshipName>
    <type>Lookup</type>
</CustomField>