force-app/main/default/objects/SIS_Evaluation_methods__c/fields/SIS_Coefficient__c.field-meta.xml
<CustomField>
    <fullName>SIS_Coefficient__c</fullName>
    <label>Coefficient</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>