force-app/main/default/objects/SIS_Evaluation_methods__c/fields/SIS_Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>SIS_Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>hed__Course_Offering__c</referenceTo>
    <relationshipLabel>Evaluation methods</relationshipLabel>
    <relationshipName>Evaluation_methods</relationshipName>
    <type>Lookup</type>
</CustomField>