force-app/main/default/objects/SIS_Evaluation_methods__c/fields/SIS_Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>SIS_Evaluation_Type__c</fullName>
    <label>Evaluation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SIS_Evaluation_Type</valueSetName>
    </valueSet>
</CustomField>