force-app/main/default/objects/SIS_Evaluation_methods__c/fields/SIS_List_Skills__c.field-meta.xml
<CustomField>
    <fullName>SIS_List_Skills__c</fullName>
    <label>Liste compétences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>